--- a/mk01_rmarkdown-tables.html
+++ b/mk01_rmarkdown-tables.html
@@ -394,6 +394,31 @@ div.tocify {
 <h1 number="1"><span class="header-section-number">1</span> Objectives</h1>
 <p>This section covers some packages for displaying data in tables in your R Markdown reports.</p>
 </div>
+<div id="resources" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Resources</h1>
+<p>Slides: this is an extra lesson, so there aren’t currently slides available (yet!)</p>
+<p>RStudio.Cloud: this is an extra lesson, so there isn’t an RStudio.Cloud project (yet!)</p>
+</div>
+<div id="packages" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Packages</h1>
+<p>We’ll be covering a few different packages to use for displaying data in tables:</p>
+<ul>
+<li><a href="https://gt.rstudio.com/"><code>gt</code></a><br />
+</li>
+<li><a href="https://glin.github.io/reactable/"><code>reactable</code></a><br />
+</li>
+<li><a href="https://rstudio.github.io/DT/"><code>DT</code></a></li>
+</ul>
+<pre class="r"><code>library(tidyverse)
+library(gt)
+library(reactable)
+library(DT)</code></pre>
+</div>
+<div id="data" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Data</h1>
+<p>The data for this section comes from the <code>fivethirtyeight</code> package.</p>
+<pre class="r"><code>library(fivethirtyeight)</code></pre>
+</div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
