--- a/slides.html
+++ b/slides.html
@@ -312,13 +312,17 @@ $(document).ready(function () {
 
 <div id="view-these-slide-decks-in-your-bowser-or-save-as-pdfs" class="section level3">
 <h3>View these slide decks in your bowser or save as PDFs</h3>
-<ul>
-<li><p><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html">Reproducible Data Analysis With R</a></p></li>
-<li><p><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html">Data Manipulation with R: An introduction to the dplyr package</a></p></li>
-<li><p><a href="https://mjfrigaard.github.io/data-transformations-joins/Index.html">Data Reshaping in R: reshaping, transforming, and joining data in R</a></p></li>
+<ol style="list-style-type: decimal">
+<li><p><a href="https://mjfrigaard.github.io/intro-to-r-programming/Index.html#1">Introduction to R Programming</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/r-workflow-best-practices/Index.html#1">R Workflow Best Practices</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/rep-res-rmarkdown/Index.html#1">Reproducible Data Analysis With R</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-manip-intro/Index.html#1">Data Manipulation with R</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/data-transformations-joins/Index.html#1">Data Reshaping in R</a></p></li>
 <li><p><a href="https://mjfrigaard.github.io/data-viz-intro/Index.html#1">Introduction to Data Visualization with ggplot2</a></p></li>
-<li><p><a href="https://mjfrigaard.github.io/data-viz-as-comm/Index.html">Data Visualization as Communication</a></p></li>
-</ul>
+<li><p><a href="https://mjfrigaard.github.io/data-viz-as-comm/Index.html#1">Data Visualization as Communication</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/intro-to-dashboards/Index.html#1">Introduction to Dashboards</a></p></li>
+<li><p><a href="https://mjfrigaard.github.io/intro-to-shiny/Index.html#1">Introduction to Shiny Apps</a></p></li>
+</ol>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
