--- a/slides.html
+++ b/slides.html
@@ -324,6 +324,11 @@ $(document).ready(function () {
 <li><p><a href="https://mjfrigaard.github.io/intro-to-shiny/Index.html#1">Introduction to Shiny Apps</a></p></li>
 </ol>
 </div>
+<div id="roadmap" class="section level3">
+<h3>Roadmap</h3>
+<p>Below is a roadmap for the lessons and materials:</p>
+<p><img src="https://raw.githubusercontent.com/mjfrigaard/r-meetup-tutorials/837785fb1ab806d047bab2fa9c799966e7f9e75a/img/r-trainings-roadmap.svg" /><!-- --></p>
+</div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
